--- a/changelog.txt
+++ b/changelog.txt
@@ -37,6 +37,13 @@ AvsPmod can only provide a user-friendly editor if he has no problems with the n
 If, for example, there is a '-' in the file name of the dll, AvsPmod will report it at startup, 
 please rename this dll and replace the '-' with a '_'
 
+--------------------------
+Version 2.7.2.5 [2022-08-01] GPo
+--------------------------
+* OptionsDialog saves/restores the last page index.
+* Slider window radio buttons look better again when no sytem zoom is used.
+* Bugfix: If thread progress dialog option 2 or 3 was selected the mouse pointer was not reset when clicking into the video window. 
+* Some othe changes
 
 --------------------------
 Version 2.7.2.4 [2022-07-31] GPo
