--- a/changelog.txt
+++ b/changelog.txt
@@ -37,13 +37,25 @@ AvsPmod can only provide a user-friendly editor if he has no problems with the n
 If, for example, there is a '-' in the file name of the dll, AvsPmod will report it at startup, 
 please rename this dll and replace the '-' with a '_'
 
+
+--------------------------
+Version 2.7.2.6 [2022-08-09] GPo
+--------------------------
+* New tool in the 'Tool' menu, Session Info, check it.
+- if you are updating only the AvsPmod directory, you need to copy from the archive tools\'session_info.py' and 'ToolsMenu.py' to 
+- the AvsPmod tools folder and delete the file AvsPmod > tools > ToolsMenu.pyo
+- tool info: all changes made have no effect on the original files, only when the session is saved, the changes are written to the file to be saved.
+* Fixed: On closing all tabs or reloading the startup session an error can be displayed.
+* Fixed: flickering when the frame was displayed and the thread progress option is 2 or 3 and the frame loading took longer.
+* Some other changes
+
 --------------------------
 Version 2.7.2.5 [2022-08-01] GPo
 --------------------------
 * OptionsDialog saves/restores the last page index.
-* Slider window radio buttons look better again when no sytem zoom is used.
+* Slider window radio buttons look better again when no system zoom is used.
 * Bugfix: If thread progress dialog option 2 or 3 was selected the mouse pointer was not reset when clicking into the video window. 
-* Some othe changes
+* Some other changes
 
 --------------------------
 Version 2.7.2.4 [2022-07-31] GPo
