--- a/changelog.txt
+++ b/changelog.txt
@@ -38,13 +38,14 @@ If, for example, there is a '-' in the file name of the dll, AvsPmod will report
 please rename this dll and replace the '-' with a '_'
 
 --------------------------
-Version 2.7.4.7 [2023-06-03] GPo
+Version 2.7.4.7 - 2.7.4.8 [2023-06-03] GPo
 --------------------------.
 * Audio playback is now WinXP 32bit compatible
 * Fast VUV > RGB conversion (DecodeYUVtoRGB.dll, DTL Doom9) now also for 32 bit available.
 * Added: Options > Font & Colors > Mis 2 > 'Video controls frame text field bold', use bold font style or not.
 * Added: avisynth 'DelayAudio' as a slider to filterdb.dat
 * Minor bugfix audio: In the playback, an attempt was always made to create the audio, even if the video did not contain any audio.
+* Bugfix 2.7.4.8: When clicking in the "Video" menu bar, an error is displayed if the video (clip) is not initialized. Sorry.
 
 --------------------------
 Version 2.7.4.6 [2023-05-27] GPo
