--- a/changelog.txt
+++ b/changelog.txt
@@ -38,6 +38,12 @@ If, for example, there is a '-' in the file name of the dll, AvsPmod will report
 please rename this dll and replace the '-' with a '_'
 
 --------------------------
+Version 2.7.5.3 [2023-08-08] GPo
+--------------------------
+* Improved loading speed if not Program Options > Save\Load > 'Save or read AvsPmod marked script' enabled.
+* Added Video > Tools > 'Script selector' (in progress)
+* Bugfix: D3D Window
+--------------------------
 Version 2.7.5.2 [2023-08-04] GPo
 --------------------------
 * New docking option for the frame properties window when 'Separate window' is selected in the options.
